// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list does not list devDependencies when production 1`] = `
Array [
  Object {
    "data": "package.json: No license field",
    "error": true,
    "type": "warning",
  },
  Object {
    "data": "No license field",
    "error": true,
    "type": "warning",
  },
  Object {
    "data": Object {
      "trees": Array [
        Object {
          "_path": ".../v4/npm-a-1.0.2-f80c6c397144596c990213074b51f3a0b0f3c6f9-integrity/node_modules/a",
          "children": Array [],
          "color": "bold",
          "depth": 0,
          "hint": null,
          "name": "a@1.0.2",
        },
      ],
      "type": "list",
    },
    "error": false,
    "type": "tree",
  },
]
`;

exports[`list lists all dependencies when not production 1`] = `
Array [
  Object {
    "data": "package.json: No license field",
    "error": true,
    "type": "warning",
  },
  Object {
    "data": "No license field",
    "error": true,
    "type": "warning",
  },
  Object {
    "data": Object {
      "trees": Array [
        Object {
          "_path": ".../v4/npm-a-1.0.2-f80c6c397144596c990213074b51f3a0b0f3c6f9-integrity/node_modules/a",
          "children": Array [],
          "color": "bold",
          "depth": 0,
          "hint": null,
          "name": "a@1.0.2",
        },
        Object {
          "_path": ".../v4/npm-b-1.0.0-f80c6c397144596c990213074b51f3a0b0f3c6f9-integrity/node_modules/b",
          "children": Array [],
          "color": "bold",
          "depth": 0,
          "hint": null,
          "name": "b@1.0.0",
        },
      ],
      "type": "list",
    },
    "error": false,
    "type": "tree",
  },
]
`;
